pkg/grammars/jinjagrammar/jinja_parser.go
// Code generated from Jinja.g4 by ANTLR 4.13.2. DO NOT EDIT.

package jinjagrammar // Jinja
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type Jinja struct {
	*antlr.BaseParser
}

var JinjaParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func jinjaParserInit() {
	staticData := &JinjaParserStaticData
	staticData.LiteralNames = []string{
		"", "'{{'", "'{%'", "'{#'", "", "'}}'", "", "", "", "", "", "", "'.'",
		"'|'", "'=='", "'!='", "", "", "'%}'", "'if'", "'elif'", "'else'", "'endif'",
		"'for'", "'in'", "'endfor'", "'macro'", "'endmacro'", "'set'", "", "",
		"", "", "", "", "", "'#}'",
	}
	staticData.SymbolicNames = []string{
		"", "EXPR_START", "BLOCK_START", "COMMENT_START", "TEXT", "EXPR_END",
		"E_NAME", "E_STRING", "E_NUMBER", "E_LPAREN", "E_RPAREN", "E_COMMA",
		"E_DOT", "E_PIPE", "E_EQ", "E_NEQ", "E_ASSIGN", "E_WS", "BLOCK_END",
		"KW_IF", "KW_ELIF", "KW_ELSE", "KW_ENDIF", "KW_FOR", "KW_IN", "KW_ENDFOR",
		"KW_MACRO", "KW_ENDMACRO", "KW_SET", "B_NAME", "B_STRING", "B_ASSIGN",
		"B_LPAREN", "B_RPAREN", "B_COMMA", "B_WS", "COMMENT_END", "COMMENT_BODY",
	}
	staticData.RuleNames = []string{
		"template", "element", "expr", "primary", "argList", "arg", "ifBlock",
		"elifClause", "elseClause", "blockExpr", "forBlock", "macroBlock", "paramList",
		"param", "setStmt",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// JinjaInit initializes any static state used to implement Jinja. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewJinja(). You can call this function if you wish to initialize the static state ahead
// of time.
func JinjaInit() {
	staticData := &JinjaParserStaticData
	staticData.once.Do(jinjaParserInit)
}

// NewJinja produces a new parser instance for the optional input antlr.TokenStream.
func NewJinja(input antlr.TokenStream) *Jinja {
	JinjaInit()
	this := new(Jinja)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &JinjaParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Jinja.g4"

	return this
}

// Jinja tokens.
const (
	JinjaEOF           = antlr.TokenEOF
	JinjaEXPR_START    = 1
	JinjaBLOCK_START   = 2
	JinjaCOMMENT_START = 3
	JinjaTEXT          = 4
	JinjaEXPR_END      = 5
	JinjaE_NAME        = 6
	JinjaE_STRING      = 7
	JinjaE_NUMBER      = 8
	JinjaE_LPAREN      = 9
	JinjaE_RPAREN      = 10
	JinjaE_COMMA       = 11
	JinjaE_DOT         = 12
	JinjaE_PIPE        = 13
	JinjaE_EQ          = 14
	JinjaE_NEQ         = 15
	JinjaE_ASSIGN      = 16
	JinjaE_WS          = 17
	JinjaBLOCK_END     = 18
	JinjaKW_IF         = 19
	JinjaKW_ELIF       = 20
	JinjaKW_ELSE       = 21
	JinjaKW_ENDIF      = 22
	JinjaKW_FOR        = 23
	JinjaKW_IN         = 24
	JinjaKW_ENDFOR     = 25
	JinjaKW_MACRO      = 26
	JinjaKW_ENDMACRO   = 27
	JinjaKW_SET        = 28
	JinjaB_NAME        = 29
	JinjaB_STRING      = 30
	JinjaB_ASSIGN      = 31
	JinjaB_LPAREN      = 32
	JinjaB_RPAREN      = 33
	JinjaB_COMMA       = 34
	JinjaB_WS          = 35
	JinjaCOMMENT_END   = 36
	JinjaCOMMENT_BODY  = 37
)

// Jinja rules.
const (
	JinjaRULE_template   = 0
	JinjaRULE_element    = 1
	JinjaRULE_expr       = 2
	JinjaRULE_primary    = 3
	JinjaRULE_argList    = 4
	JinjaRULE_arg        = 5
	JinjaRULE_ifBlock    = 6
	JinjaRULE_elifClause = 7
	JinjaRULE_elseClause = 8
	JinjaRULE_blockExpr  = 9
	JinjaRULE_forBlock   = 10
	JinjaRULE_macroBlock = 11
	JinjaRULE_paramList  = 12
	JinjaRULE_param      = 13
	JinjaRULE_setStmt    = 14
)

// ITemplateContext is an interface to support dynamic dispatch.
type ITemplateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllElement() []IElementContext
	Element(i int) IElementContext

	// IsTemplateContext differentiates from other interfaces.
	IsTemplateContext()
}

type TemplateContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTemplateContext() *TemplateContext {
	var p = new(TemplateContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JinjaRULE_template
	return p
}

func InitEmptyTemplateContext(p *TemplateContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JinjaRULE_template
}

func (*TemplateContext) IsTemplateContext() {}

func NewTemplateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TemplateContext {
	var p = new(TemplateContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = JinjaRULE_template

	return p
}

func (s *TemplateContext) GetParser() antlr.Parser { return s.parser }

func (s *TemplateContext) EOF() antlr.TerminalNode {
	return s.GetToken(JinjaEOF, 0)
}

func (s *TemplateContext) AllElement() []IElementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IElementContext); ok {
			len++
		}
	}

	tst := make([]IElementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IElementContext); ok {
			tst[i] = t.(IElementContext)
			i++
		}
	}

	return tst
}

func (s *TemplateContext) Element(i int) IElementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IElementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IElementContext)
}

func (s *TemplateContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TemplateContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TemplateContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterTemplate(s)
	}
}

func (s *TemplateContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitTemplate(s)
	}
}

func (s *TemplateContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitTemplate(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Jinja) Template() (localctx ITemplateContext) {
	localctx = NewTemplateContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, JinjaRULE_template)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&30) != 0 {
		{
			p.SetState(30)
			p.Element()
		}

		p.SetState(35)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(36)
		p.Match(JinjaEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IElementContext is an interface to support dynamic dispatch.
type IElementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsElementContext differentiates from other interfaces.
	IsElementContext()
}

type ElementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyElementContext() *ElementContext {
	var p = new(ElementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JinjaRULE_element
	return p
}

func InitEmptyElementContext(p *ElementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JinjaRULE_element
}

func (*ElementContext) IsElementContext() {}

func NewElementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ElementContext {
	var p = new(ElementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = JinjaRULE_element

	return p
}

func (s *ElementContext) GetParser() antlr.Parser { return s.parser }

func (s *ElementContext) CopyAll(ctx *ElementContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *ElementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ElementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type RawTextContext struct {
	ElementContext
}

func NewRawTextContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *RawTextContext {
	var p = new(RawTextContext)

	InitEmptyElementContext(&p.ElementContext)
	p.parser = parser
	p.CopyAll(ctx.(*ElementContext))

	return p
}

func (s *RawTextContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RawTextContext) TEXT() antlr.TerminalNode {
	return s.GetToken(JinjaTEXT, 0)
}

func (s *RawTextContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterRawText(s)
	}
}

func (s *RawTextContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitRawText(s)
	}
}

func (s *RawTextContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitRawText(s)

	default:
		return t.VisitChildren(s)
	}
}

type MacroTagContext struct {
	ElementContext
}

func NewMacroTagContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MacroTagContext {
	var p = new(MacroTagContext)

	InitEmptyElementContext(&p.ElementContext)
	p.parser = parser
	p.CopyAll(ctx.(*ElementContext))

	return p
}

func (s *MacroTagContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MacroTagContext) MacroBlock() IMacroBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMacroBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMacroBlockContext)
}

func (s *MacroTagContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterMacroTag(s)
	}
}

func (s *MacroTagContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitMacroTag(s)
	}
}

func (s *MacroTagContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitMacroTag(s)

	default:
		return t.VisitChildren(s)
	}
}

type IfTagContext struct {
	ElementContext
}

func NewIfTagContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *IfTagContext {
	var p = new(IfTagContext)

	InitEmptyElementContext(&p.ElementContext)
	p.parser = parser
	p.CopyAll(ctx.(*ElementContext))

	return p
}

func (s *IfTagContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IfTagContext) IfBlock() IIfBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIfBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIfBlockContext)
}

func (s *IfTagContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterIfTag(s)
	}
}

func (s *IfTagContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitIfTag(s)
	}
}

func (s *IfTagContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitIfTag(s)

	default:
		return t.VisitChildren(s)
	}
}

type SetTagContext struct {
	ElementContext
}

func NewSetTagContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SetTagContext {
	var p = new(SetTagContext)

	InitEmptyElementContext(&p.ElementContext)
	p.parser = parser
	p.CopyAll(ctx.(*ElementContext))

	return p
}

func (s *SetTagContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SetTagContext) SetStmt() ISetStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISetStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISetStmtContext)
}

func (s *SetTagContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterSetTag(s)
	}
}

func (s *SetTagContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitSetTag(s)
	}
}

func (s *SetTagContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitSetTag(s)

	default:
		return t.VisitChildren(s)
	}
}

type CommentTagContext struct {
	ElementContext
}

func NewCommentTagContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *CommentTagContext {
	var p = new(CommentTagContext)

	InitEmptyElementContext(&p.ElementContext)
	p.parser = parser
	p.CopyAll(ctx.(*ElementContext))

	return p
}

func (s *CommentTagContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommentTagContext) COMMENT_START() antlr.TerminalNode {
	return s.GetToken(JinjaCOMMENT_START, 0)
}

func (s *CommentTagContext) COMMENT_END() antlr.TerminalNode {
	return s.GetToken(JinjaCOMMENT_END, 0)
}

func (s *CommentTagContext) AllCOMMENT_BODY() []antlr.TerminalNode {
	return s.GetTokens(JinjaCOMMENT_BODY)
}

func (s *CommentTagContext) COMMENT_BODY(i int) antlr.TerminalNode {
	return s.GetToken(JinjaCOMMENT_BODY, i)
}

func (s *CommentTagContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterCommentTag(s)
	}
}

func (s *CommentTagContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitCommentTag(s)
	}
}

func (s *CommentTagContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitCommentTag(s)

	default:
		return t.VisitChildren(s)
	}
}

type ForTagContext struct {
	ElementContext
}

func NewForTagContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ForTagContext {
	var p = new(ForTagContext)

	InitEmptyElementContext(&p.ElementContext)
	p.parser = parser
	p.CopyAll(ctx.(*ElementContext))

	return p
}

func (s *ForTagContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ForTagContext) ForBlock() IForBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IForBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IForBlockContext)
}

func (s *ForTagContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterForTag(s)
	}
}

func (s *ForTagContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitForTag(s)
	}
}

func (s *ForTagContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitForTag(s)

	default:
		return t.VisitChildren(s)
	}
}

type ExprTagContext struct {
	ElementContext
}

func NewExprTagContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExprTagContext {
	var p = new(ExprTagContext)

	InitEmptyElementContext(&p.ElementContext)
	p.parser = parser
	p.CopyAll(ctx.(*ElementContext))

	return p
}

func (s *ExprTagContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExprTagContext) EXPR_START() antlr.TerminalNode {
	return s.GetToken(JinjaEXPR_START, 0)
}

func (s *ExprTagContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ExprTagContext) EXPR_END() antlr.TerminalNode {
	return s.GetToken(JinjaEXPR_END, 0)
}

func (s *ExprTagContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterExprTag(s)
	}
}

func (s *ExprTagContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitExprTag(s)
	}
}

func (s *ExprTagContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitExprTag(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Jinja) Element() (localctx IElementContext) {
	localctx = NewElementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, JinjaRULE_element)
	var _la int

	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		localctx = NewRawTextContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(38)
			p.Match(JinjaTEXT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 2:
		localctx = NewExprTagContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(39)
			p.Match(JinjaEXPR_START)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(40)
			p.expr(0)
		}
		{
			p.SetState(41)
			p.Match(JinjaEXPR_END)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 3:
		localctx = NewIfTagContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(43)
			p.IfBlock()
		}

	case 4:
		localctx = NewForTagContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(44)
			p.ForBlock()
		}

	case 5:
		localctx = NewMacroTagContext(p, localctx)
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(45)
			p.MacroBlock()
		}

	case 6:
		localctx = NewSetTagContext(p, localctx)
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(46)
			p.SetStmt()
		}

	case 7:
		localctx = NewCommentTagContext(p, localctx)
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(47)
			p.Match(JinjaCOMMENT_START)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(51)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == JinjaCOMMENT_BODY {
			{
				p.SetState(48)
				p.Match(JinjaCOMMENT_BODY)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

			p.SetState(53)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(54)
			p.Match(JinjaCOMMENT_END)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExprContext is an interface to support dynamic dispatch.
type IExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsExprContext differentiates from other interfaces.
	IsExprContext()
}

type ExprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExprContext() *ExprContext {
	var p = new(ExprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JinjaRULE_expr
	return p
}

func InitEmptyExprContext(p *ExprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = JinjaRULE_expr
}

func (*ExprContext) IsExprContext() {}

func NewExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExprContext {
	var p = new(ExprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = JinjaRULE_expr

	return p
}

func (s *ExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ExprContext) CopyAll(ctx *ExprContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *ExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type PrimaryExprContext struct {
	ExprContext
}

func NewPrimaryExprContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *PrimaryExprContext {
	var p = new(PrimaryExprContext)

	InitEmptyExprContext(&p.ExprContext)
	p.parser = parser
	p.CopyAll(ctx.(*ExprContext))

	return p
}

func (s *PrimaryExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PrimaryExprContext) Primary() IPrimaryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrimaryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrimaryContext)
}

func (s *PrimaryExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterPrimaryExpr(s)
	}
}

func (s *PrimaryExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitPrimaryExpr(s)
	}
}

func (s *PrimaryExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitPrimaryExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

type FieldAccessContext struct {
	ExprContext
}

func NewFieldAccessContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FieldAccessContext {
	var p = new(FieldAccessContext)

	InitEmptyExprContext(&p.ExprContext)
	p.parser = parser
	p.CopyAll(ctx.(*ExprContext))

	return p
}

func (s *FieldAccessContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldAccessContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *FieldAccessContext) E_DOT() antlr.TerminalNode {
	return s.GetToken(JinjaE_DOT, 0)
}

func (s *FieldAccessContext) E_NAME() antlr.TerminalNode {
	return s.GetToken(JinjaE_NAME, 0)
}

func (s *FieldAccessContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterFieldAccess(s)
	}
}

func (s *FieldAccessContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitFieldAccess(s)
	}
}

func (s *FieldAccessContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitFieldAccess(s)

	default:
		return t.VisitChildren(s)
	}
}

type FilterExprContext struct {
	ExprContext
}

func NewFilterExprContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FilterExprContext {
	var p = new(FilterExprContext)

	InitEmptyExprContext(&p.ExprContext)
	p.parser = parser
	p.CopyAll(ctx.(*ExprContext))

	return p
}

func (s *FilterExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FilterExprContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *FilterExprContext) E_PIPE() antlr.TerminalNode {
	return s.GetToken(JinjaE_PIPE, 0)
}

func (s *FilterExprContext) E_NAME() antlr.TerminalNode {
	return s.GetToken(JinjaE_NAME, 0)
}

func (s *FilterExprContext) E_LPAREN() antlr.TerminalNode {
	return s.GetToken(JinjaE_LPAREN, 0)
}

func (s *FilterExprContext) E_RPAREN() antlr.TerminalNode {
	return s.GetToken(JinjaE_RPAREN, 0)
}

func (s *FilterExprContext) ArgList() IArgListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArgListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArgListContext)
}

func (s *FilterExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.EnterFilterExpr(s)
	}
}

func (s *FilterExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JinjaListener); ok {
		listenerT.ExitFilterExpr(s)
	}
}

func (s *FilterExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JinjaVisitor:
		return t.VisitFilterExpr(s)
